Implement Match.notifyObservers and add MatchObserverCallable functional interface